--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: FPCD Survival Guide
 site_author: 'Noah Husby'
-site_url: https://firstpresdearborn.github.io/survival-guide
+site_url: https://docs.pillarproductions.org
 docs_dir: docs/
 repo_name: 'firstpresdearborn/survival-guide'
 repo_url: 'https://github.com/firstpresdearborn/survival-guide'
